--- a/index.html
+++ b/index.html
@@ -1,19 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Intro</title>
 </head>
+
 <body>
     <div>
-<h1>News</h1>
-<h2>Breaking...</h2>
+        <!-- &nbsp; entity for spaces -->
+        <h1>News &nbsp; &nbsp; A</h1>
+        
+        <span style="background-color: red;">&nbsp;&nbsp;</span>
+    
+        <h2>Breaking 1</h2>
+        <P> Lorem ipsum dolor, sit amet consectetur adipisicing elit. <br>
+            Praesentium <span style="color: aquamarine;">assumenda voluptatem quae quo sed</span>
+            obcaecati repudiandae cupiditate voluptates animi perferendis debitis nisi, deserunt maxime, laudantium
+            exercitationem? <br>Voluptate delectus itaque ea!
+
+        </P>
+
+    </div>
+    <hr>
+
+    <div style="background-color: red;">
+        <h1 style="color:blue">News B</h1>
+        <h2>Breaking 2</h2>
+        <ol>
+            <li>milk</li>
+            <li> wine</li>
+            <li>salt</li>
+
+        </ol>
+
+
 
     </div>
 
 
 
-
 </body>
+
 </html>
